[metadata]
name = gerrit-job-results
summary = Customised gerrit job result dashboard
description-file =
    README.rst
author = Ian Wienand
author-email = iwienand@redhat.com
classifier =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: MIT License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.3
    Programming Language :: Python :: 3.4

[files]
packages =
    gerrit-job-results

[entry_points]
console_scripts =
    gerrit-job-results = gerrit_job_results.gerrit_job_results:main

